--- a/applications/application-system-apps.yaml
+++ b/applications/application-system-apps.yaml
@@ -1,21 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: apps
+  name: system-apps
   namespace: argocd
 spec:
   destination:
-    namespace: argocd-apps
+    namespace: system-apps
     server: https://kubernetes.default.svc
   project: default
   source:
     directory:
       jsonnet: {}
       recurse: true
-    path: manifests/
+    path: applications/
     repoURL: git@github.com:devsres-com/gitops-demonstration.git
   syncPolicy:
     automated: {}
     syncOptions:
-    - CreateNamespace=trye
     - CreateNamespace=true
