--- a/applications/application-apps-guestbook.yaml
+++ b/applications/application-apps-guestbook.yaml
@@ -15,6 +15,8 @@ spec:
     path: manifests/guestbook
     repoURL: https://github.com/devsres-com/gitops-demonstration.git
   syncPolicy:
-    automated: {}
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
     - CreateNamespace=true
