--- a/applications/application-apps-podinfo.yaml
+++ b/applications/application-apps-podinfo.yaml
@@ -15,6 +15,8 @@ spec:
     path: manifests/podinfo
     repoURL: https://github.com/devsres-com/gitops-demonstration.git 
   syncPolicy:
-    automated: {}
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
     - CreateNamespace=true
