--- a/applications/application-prometheus.yaml
+++ b/applications/application-prometheus.yaml
@@ -13,6 +13,8 @@ spec:
     repoURL: https://prometheus-community.github.io/helm-charts 
     targetRevision: 15.5.3
   syncPolicy:
-    automated: {}
+    automated:
+      prune: true
+      selfHeal: true  
     syncOptions:
     - CreateNamespace=true
