--- a/applications/application-ingress-haproxy.yaml
+++ b/applications/application-ingress-haproxy.yaml
@@ -14,9 +14,8 @@ spec:
     targetRevision: 0.13.6 
     helm:
       values: |
-        controller:
-          ingressClassResource: enabled
-          ingressClassResource: default	
+        controller.ingressClassResource: enabled
+        controller.ingressClassResource: default	
   syncPolicy:
     automated: 
       prune: true
