--- a/manifests/podinfo/kustomize/hpa.yaml
+++ b/manifests/podinfo/kustomize/hpa.yaml
@@ -1,12 +1,12 @@
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: frontend
+  name: podinfo
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: backend
+    name: podinfo
   minReplicas: 2
   maxReplicas: 4
   metrics:
@@ -15,4 +15,6 @@ spec:
       name: cpu
       target:
         type: Utilization
+        # scale up if usage is above
+        # 99% of the requested CPU (100m)
         averageUtilization: 99
