Adicionando AWS cwagent

--- a/manifests/system-apps/aws/cwagent/cwagent-fluent-bit-quickstart.yaml
+++ b/manifests/system-apps/aws/cwagent/cwagent-fluent-bit-quickstart.yaml
@@ -1,12 +1,12 @@
 # https://raw.githubusercontent.com/aws-samples/amazon-cloudwatch-container-insights/latest/k8s-deployment-manifest-templates/deployment-mode/daemonset/container-insights-monitoring/quickstart/cwagent-fluent-bit-quickstart.yaml
 # create amazon-cloudwatch namespace
-apiVersion: v1
-kind: Namespace
-metadata:
-  annotations:
-  name: amazon-cloudwatch
-  labels:
-    name: amazon-cloudwatch
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   annotations:
+#   name: amazon-cloudwatch
+#   labels:
+#     name: amazon-cloudwatch
 ---
 
 # create cwagent service account and role binding
