--- a/applications/system-apps/aws/application-cwagent.yaml
+++ b/applications/system-apps/aws/application-cwagent.yaml
@@ -1,18 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: apps-guestbook 
+  name: aws-cwagent 
   namespace: argocd
 spec:
   destination:
-    namespace: apps-guestbook
+    namespace: amazon-cloudwatch
     server: https://kubernetes.default.svc
   project: default
   source:
     directory:
       jsonnet: {}
       recurse: true
-    path: manifests/guestbook
+    path: manifests/system-apps/aws/cwagent
     repoURL: https://github.com/devsres-com/gitops-demonstration.git
   syncPolicy:
     automated:
