--- a/applications/client-apps/client2/application-apps-podinfo.yaml
+++ b/applications/client-apps/client2/application-apps-podinfo.yaml
@@ -7,7 +7,7 @@ spec:
   destination:
     namespace: apps-podinfo
     server: https://kubernetes.default.svc
-  project: default
+  project: client-apps-client2 
   source:
     directory:
       jsonnet: {}
