--- a/applications/system-apps/common/application-grafana.yaml
+++ b/applications/system-apps/common/application-grafana.yaml
@@ -7,7 +7,7 @@ spec:
   destination:
     namespace: prometheus 
     server: https://kubernetes.default.svc
-  project: default
+  project: system-apps
   source:
     chart: grafana 
     repoURL:  https://grafana.github.io/helm-charts
