--- a/applications/system-apps/common/application-ingress-nginx.yaml
+++ b/applications/system-apps/common/application-ingress-nginx.yaml
@@ -7,7 +7,7 @@ spec:
   destination:
     namespace: ingress-nginx
     server: https://kubernetes.default.svc
-  project: default
+  project: system-apps
   source:
     chart: ingress-nginx
     helm:
