--- a/applications/system-apps/common/application-prometheus.yaml
+++ b/applications/system-apps/common/application-prometheus.yaml
@@ -7,7 +7,7 @@ spec:
   destination:
     namespace: prometheus 
     server: https://kubernetes.default.svc
-  project: default
+  project: system-apps
   source:
     chart: prometheus
     repoURL: https://prometheus-community.github.io/helm-charts 
