--- a/applications/system-apps/common/application-system-metrics-server.yaml
+++ b/applications/system-apps/common/application-system-metrics-server.yaml
@@ -7,7 +7,7 @@ spec:
   destination:
     namespace: kube-system
     server: https://kubernetes.default.svc
-  project: default
+  project: system-apps
   source:
     directory:
       jsonnet: {}
