--- a/manifests/system-apps/aws/cwagent/cwagent-fluent-bit-quickstart.yaml
+++ b/manifests/system-apps/aws/cwagent/cwagent-fluent-bit-quickstart.yaml
@@ -6,14 +6,14 @@ metadata:
   labels:
     name: amazon-cloudwatch
 ---
-
 # create cwagent service account and role binding
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: cloudwatch-agent
   namespace: amazon-cloudwatch
-
+  annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::301243989709:role/DevSresEKS_cwagent
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
@@ -38,8 +38,7 @@ rules:
   - apiGroups: [""]
     resources: ["configmaps"]
     resourceNames: ["cwagent-clusterleader"]
-    verbs: ["get","update"]
-
+    verbs: ["get", "update"]
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
@@ -54,7 +53,6 @@ roleRef:
   name: cloudwatch-agent-role
   apiGroup: rbac.authorization.k8s.io
 ---
-
 # create configmap for cwagent config
 apiVersion: v1
 data:
@@ -80,7 +78,6 @@ metadata:
   name: cwagentconfig
   namespace: amazon-cloudwatch
 ---
-
 # deploy cwagent as daemonset
 apiVersion: apps/v1
 kind: DaemonSet
@@ -105,7 +102,7 @@ spec:
           #    protocol: UDP
           resources:
             limits:
-              cpu:  200m
+              cpu: 200m
               memory: 200Mi
             requests:
               cpu: 200m
@@ -172,9 +169,7 @@ spec:
             path: /dev/disk/
       terminationGracePeriodSeconds: 60
       serviceAccountName: cloudwatch-agent
-
 ---
-
 # create configmap for cluster name and aws region for CloudWatch Logs
 # need to replace the placeholders devsres-lab and us-east-1
 # and need to replace "On" and "2020"
@@ -192,12 +187,13 @@ metadata:
   name: fluent-bit-cluster-info
   namespace: amazon-cloudwatch
 ---
-
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: fluent-bit
   namespace: amazon-cloudwatch
+  annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::301243989709:role/DevSresEKS_cwagent
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -236,24 +232,7 @@ metadata:
   labels:
     k8s-app: fluent-bit
 data:
-  fluent-bit.conf: |
-    [SERVICE]
-        Flush                     5
-        Log_Level                 info
-        Daemon                    off
-        Parsers_File              parsers.conf
-        HTTP_Server               ${HTTP_SERVER}
-        HTTP_Listen               0.0.0.0
-        HTTP_Port                 ${HTTP_PORT}
-        storage.path              /var/fluent-bit/state/flb-storage/
-        storage.sync              normal
-        storage.checksum          off
-        storage.backlog.mem_limit 5M
-        
-    @INCLUDE application-log.conf
-    @INCLUDE dataplane-log.conf
-    @INCLUDE host-log.conf
-  
+  fluent-bit.conf: "[SERVICE]\n    Flush                     5\n    Log_Level                 info\n    Daemon                    off\n    Parsers_File              parsers.conf\n    HTTP_Server               ${HTTP_SERVER}\n    HTTP_Listen               0.0.0.0\n    HTTP_Port                 ${HTTP_PORT}\n    storage.path              /var/fluent-bit/state/flb-storage/\n    storage.sync              normal\n    storage.checksum          off\n    storage.backlog.mem_limit 5M\n    \n@INCLUDE application-log.conf\n@INCLUDE dataplane-log.conf\n@INCLUDE host-log.conf\n"
   application-log.conf: |
     [INPUT]
         Name                tail
@@ -317,7 +296,6 @@ data:
         log_stream_prefix   ${HOST_NAME}-
         auto_create_group   true
         extra_user_agent    container-insights
-
   dataplane-log.conf: |
     [INPUT]
         Name                systemd
@@ -365,7 +343,6 @@ data:
         log_stream_prefix   ${HOST_NAME}-
         auto_create_group   true
         extra_user_agent    container-insights
-    
   host-log.conf: |
     [INPUT]
         Name                tail
@@ -413,7 +390,6 @@ data:
         log_stream_prefix   ${HOST_NAME}.
         auto_create_group   true
         extra_user_agent    container-insights
-
   parsers.conf: |
     [PARSER]
         Name                docker
@@ -463,10 +439,10 @@ spec:
         kubernetes.io/cluster-service: "true"
     spec:
       containers:
-      - name: fluent-bit
-        image: amazon/aws-for-fluent-bit:2.10.0
-        imagePullPolicy: Always
-        env:
+        - name: fluent-bit
+          image: amazon/aws-for-fluent-bit:2.10.0
+          imagePullPolicy: Always
+          env:
             - name: AWS_REGION
               valueFrom:
                 configMapKeyRef:
@@ -503,56 +479,56 @@ spec:
                   fieldPath: spec.nodeName
             - name: CI_VERSION
               value: "k8s/1.3.9"
-        resources:
+          resources:
             limits:
               memory: 200Mi
             requests:
               cpu: 500m
               memory: 100Mi
-        volumeMounts:
-        # Please don't change below read-only permissions
-        - name: fluentbitstate
-          mountPath: /var/fluent-bit/state
-        - name: varlog
-          mountPath: /var/log
-          readOnly: true
-        - name: varlibdockercontainers
-          mountPath: /var/lib/docker/containers
-          readOnly: true
-        - name: fluent-bit-config
-          mountPath: /fluent-bit/etc/
-        - name: runlogjournal
-          mountPath: /run/log/journal
-          readOnly: true
-        - name: dmesg
-          mountPath: /var/log/dmesg
-          readOnly: true
+          volumeMounts:
+            # Please don't change below read-only permissions
+            - name: fluentbitstate
+              mountPath: /var/fluent-bit/state
+            - name: varlog
+              mountPath: /var/log
+              readOnly: true
+            - name: varlibdockercontainers
+              mountPath: /var/lib/docker/containers
+              readOnly: true
+            - name: fluent-bit-config
+              mountPath: /fluent-bit/etc/
+            - name: runlogjournal
+              mountPath: /run/log/journal
+              readOnly: true
+            - name: dmesg
+              mountPath: /var/log/dmesg
+              readOnly: true
       terminationGracePeriodSeconds: 10
       volumes:
-      - name: fluentbitstate
-        hostPath:
-          path: /var/fluent-bit/state
-      - name: varlog
-        hostPath:
-          path: /var/log
-      - name: varlibdockercontainers
-        hostPath:
-          path: /var/lib/docker/containers
-      - name: fluent-bit-config
-        configMap:
-          name: fluent-bit-config
-      - name: runlogjournal
-        hostPath:
-          path: /run/log/journal
-      - name: dmesg
-        hostPath:
-          path: /var/log/dmesg
+        - name: fluentbitstate
+          hostPath:
+            path: /var/fluent-bit/state
+        - name: varlog
+          hostPath:
+            path: /var/log
+        - name: varlibdockercontainers
+          hostPath:
+            path: /var/lib/docker/containers
+        - name: fluent-bit-config
+          configMap:
+            name: fluent-bit-config
+        - name: runlogjournal
+          hostPath:
+            path: /run/log/journal
+        - name: dmesg
+          hostPath:
+            path: /var/log/dmesg
       serviceAccountName: fluent-bit
       tolerations:
-      - key: node-role.kubernetes.io/master
-        operator: Exists
-        effect: NoSchedule
-      - operator: "Exists"
-        effect: "NoExecute"
-      - operator: "Exists"
-        effect: "NoSchedule"
+        - key: node-role.kubernetes.io/master
+          operator: Exists
+          effect: NoSchedule
+        - operator: "Exists"
+          effect: "NoExecute"
+        - operator: "Exists"
+          effect: "NoSchedule"
