--- a/appprojects/appproject-client1.yaml
+++ b/appprojects/appproject-client1.yaml
@@ -7,6 +7,6 @@ spec:
   clusterResourceWhitelist:
   - group: '*'
     kind: '*'
-  description: Aplicativos de sistema para o ArgoCD
+  description: Aplicativos do cliente 1
   sourceRepos:
   - https://github.com/devsres-com/gitops-demonstration.git
